Safari bug shifted a bit as a result of latest MD upgrade

--- a/app/password.css
+++ b/app/password.css
@@ -25,6 +25,6 @@ md-list-item .avoid-text-icon-overlap {
    This is a temporary workaround until it's fixed.
    TODO: check bug status periodically.
 */
-.layout-column > .flex {
+.layout-column {
     flex-shrink: 0;
 }
